Remove horizontal scrollbar as reported by fmario/unormal.

--- a/src/lib/marble/MapThemeDownloadDialog.ui
+++ b/src/lib/marble/MapThemeDownloadDialog.ui
@@ -15,7 +15,11 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QListView" name="listView"/>
+    <widget class="QListView" name="listView">
+     <property name="horizontalScrollBarPolicy">
+      <enum>Qt::ScrollBarAlwaysOff</enum>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
