--- a/src/lib/marble/MapWizard.ui
+++ b/src/lib/marble/MapWizard.ui
@@ -294,7 +294,7 @@ p, li { white-space: pre-wrap; }
           <item row="0" column="0" colspan="2">
            <widget class="QCheckBox" name="checkBoxWmsMultipleSelections">
             <property name="toolTip">
-             <string>Enable this to select multiple layers without keyboard shortcuts (Shift, Strg, Strg+A, ...)</string>
+             <string>Enable this to select multiple layers without keyboard shortcuts (Shift, Ctrl, Ctrl+A, ...)</string>
             </property>
             <property name="text">
              <string>Multiple Selections</string>
