--- a/src/lib/marble/BookmarkManagerDialog.ui
+++ b/src/lib/marble/BookmarkManagerDialog.ui
@@ -22,7 +22,7 @@
         <bool>true</bool>
        </property>
        <property name="text">
-        <string>Import Bookmarks...</string>
+        <string>Import Bookmarks…</string>
        </property>
       </widget>
      </item>
@@ -32,7 +32,7 @@
         <bool>true</bool>
        </property>
        <property name="text">
-        <string>Export Bookmarks...</string>
+        <string>Export Bookmarks…</string>
        </property>
       </widget>
      </item>
@@ -71,14 +71,14 @@
           <bool>true</bool>
          </property>
          <property name="text">
-          <string>New...</string>
+          <string>New…</string>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
         <widget class="QPushButton" name="renameFolderButton">
          <property name="text">
-          <string>Rename...</string>
+          <string>Rename…</string>
          </property>
         </widget>
        </item>
