--- a/src/lib/marble/CurrentLocationWidget.ui
+++ b/src/lib/marble/CurrentLocationWidget.ui
@@ -77,7 +77,7 @@
      <item>
       <widget class="QToolButton" name="openTrackButton">
        <property name="text">
-        <string>...</string>
+        <string>…</string>
        </property>
        <property name="icon">
         <iconset resource="../../apps/marble-ui/marble.qrc">
@@ -88,7 +88,7 @@
      <item>
       <widget class="QToolButton" name="saveTrackButton">
        <property name="text">
-        <string>...</string>
+        <string>…</string>
        </property>
        <property name="icon">
         <iconset resource="../../apps/marble-ui/marble.qrc">
