--- a/src/lib/marble/MarbleNavigator.ui
+++ b/src/lib/marble/MarbleNavigator.ui
@@ -65,7 +65,7 @@
         <string>Tilts the globe's axis towards the user.</string>
        </property>
        <property name="text" >
-        <string>...</string>
+        <string>…</string>
        </property>
        <property name="icon" >
         <iconset resource="marble.qrc" >:/icons/arrow-up.png</iconset>
@@ -81,7 +81,7 @@
         <string>Rotates the globe counterclockwise around its axis.</string>
        </property>
        <property name="text" >
-        <string>...</string>
+        <string>…</string>
        </property>
        <property name="icon" >
         <iconset resource="marble.qrc" >:/icons/arrow-left.png</iconset>
@@ -100,7 +100,7 @@
         <string>Click this button to restore the original zoom level and view angle.</string>
        </property>
        <property name="text" >
-        <string>...</string>
+        <string>…</string>
        </property>
        <property name="icon" >
         <iconset resource="marble.qrc" >:/icons/go-home.png</iconset>
@@ -119,7 +119,7 @@
         <string>Rotates the globe clockwise around its axis.</string>
        </property>
        <property name="text" >
-        <string>...</string>
+        <string>…</string>
        </property>
        <property name="icon" >
         <iconset resource="marble.qrc" >:/icons/arrow-right.png</iconset>
@@ -138,7 +138,7 @@
         <string>Tilts the globe's axis away from the user.</string>
        </property>
        <property name="text" >
-        <string>...</string>
+        <string>…</string>
        </property>
        <property name="icon" >
         <iconset resource="marble.qrc" >:/icons/arrow-down.png</iconset>
@@ -154,7 +154,7 @@
         <string>Zoom in by pressing this button to see more detail.</string>
        </property>
        <property name="text" >
-        <string>...</string>
+        <string>…</string>
        </property>
        <property name="icon" >
         <iconset resource="marble.qrc" >:/icons/zoom-in.png</iconset>
@@ -212,7 +212,7 @@
         <string>Zoom out by pressing this button to see less detail.</string>
        </property>
        <property name="text" >
-        <string>...</string>
+        <string>…</string>
        </property>
        <property name="icon" >
         <iconset resource="marble.qrc" >:/icons/zoom-out.png</iconset>
