--- a/src/lib/marble/PlacemarkEditHeader.ui
+++ b/src/lib/marble/PlacemarkEditHeader.ui
@@ -43,7 +43,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Browse...</string>
+        <string>Browse…</string>
        </property>
        <property name="iconSize">
         <size>
