--- a/src/lib/marble/TourCaptureDialog.ui
+++ b/src/lib/marble/TourCaptureDialog.ui
@@ -78,7 +78,7 @@
        <item>
         <widget class="QPushButton" name="openButton">
          <property name="text">
-          <string>Open...</string>
+          <string>Open…</string>
          </property>
         </widget>
        </item>
